Fix bbcode icons

--- a/src/components/com_kunena/template/crypsis/assets/less/editor.less
+++ b/src/components/com_kunena/template/crypsis/assets/less/editor.less
@@ -25,23 +25,6 @@ table.kpostbuttonset {
 	}
 }
 
-.kattachment {
-	.hasTip {
-		display : inline;
-	}
-}
-
-#kattachments {
-	line-height : 18px;
-	a {
-		background   : url("iconsets/editor/default/default.png") no-repeat -216px -18px;
-		display      : inline-block;
-		height       : 18px;
-		width        : 18px;
-		margin-right : 2px;
-	}
-}
-
 .form-horizontal .controls {
 	margin-left : 90px;
 }
@@ -67,130 +50,130 @@ table.kpostbuttonset {
 }
 
 .markItUp .boldbutton a {
-	background-image : url(images/bold.png);
+	background-image : url(../assets/images/bold.png);
 }
 
 .markItUp .italicbutton a {
-	background-image : url(images/italic.png);
+	background-image : url(../assets/images/italic.png);
 }
 
 .markItUp .underlinebutton a {
-	background-image : url(images/underline.png);
+	background-image : url(../assets/images/underline.png);
 }
 
 .markItUp .strokebutton a {
-	background-image : url(images/stroke.png);
+	background-image : url(../assets/images/stroke.png);
 }
 
 .markItUp .supscriptbutton a {
-	background-image : url(images/supscript.png);
+	background-image : url(../assets/images/supscript.png);
 }
 
 .markItUp .subscriptbutton a {
-	background-image : url(images/subscript.png);
+	background-image : url(../assets/images/subscript.png);
 }
 
 .markItUp .sizebutton a {
-	background-image : url(images/fonts.png);
+	background-image : url(../assets/images/fonts.png);
 }
 
 .markItUp .colors a {
-	background-image : url(images/colors.png);
+	background-image : url(../assets/images/colors.png);
 }
 
 .markItUp .bulletedlistbutton a {
-	background-image : url(images/list-bullet.png);
+	background-image : url(../assets/images/list-bullet.png);
 }
 
 .markItUp .numericlistbutton a {
-	background-image : url(images/list-numeric.png);
+	background-image : url(../assets/images/list-numeric.png);
 }
 
 .markItUp .listitembutton a {
-	background-image : url(images/list-item.png);
+	background-image : url(../assets/images/list-item.png);
 }
 
 .markItUp .alignleftbutton a {
-	background-image : url(images/text_align_left.png);
+	background-image : url(../assets/images/text_align_left.png);
 }
 
 .markItUp .centerbutton a {
-	background-image : url(images/text_align_center.png);
+	background-image : url(../assets/images/text_align_center.png);
 }
 
 .markItUp .alignrightbutton a {
-	background-image : url(images/text_align_right.png);
+	background-image : url(../assets/images/text_align_right.png);
 }
 
 .markItUp .quotebutton a {
-	background-image : url(images/quotes.png);
+	background-image : url(../assets/images/quotes.png);
 }
 
 .markItUp .codemodalboxbutton a,
 .markItUp .codesimplebutton a {
-	background-image : url(images/code.png);
+	background-image : url(../assets/images/code.png);
 }
 
 .markItUp .tablebutton a {
-	background-image : url(images/table.png);
+	background-image : url(../assets/images/table.png);
 }
 
 .markItUp .spoilerbutton a {
-	background-image : url(images/spoiler.png);
+	background-image : url(../assets/images/spoiler.png);
 }
 
 .markItUp .hiddentextbutton a {
-	background-image : url(images/hidden.png);
+	background-image : url(../assets/images/hidden.png);
 }
 
 .markItUp .picturebutton a {
-	background-image : url(images/picture.png);
+	background-image : url(../assets/images/picture.png);
 }
 
 .markItUp .linkbutton a {
-	background-image : url(images/link.png);
+	background-image : url(../assets/images/link.png);
 }
 
 .markItUp .ebaybutton a {
-	background-image : url(images/ebay.png);
+	background-image : url(../assets/images/ebay.png);
 }
 
 .markItUp .videodropdownbutton a {
-	background-image : url(images/film.png);
+	background-image : url(../assets/images/film.png);
 }
 
 .markItUp .mapbutton a {
-	background-image : url(images/map.png);
+	background-image : url(../assets/images/map.png);
 }
 
 .markItUp .pollbutton a {
-	background-image : url(images/poll.png);
+	background-image : url(../assets/images/poll.png);
 }
 
 .markItUp .tweetbutton a {
-	background-image : url(images/tweet.png);
+	background-image : url(../assets/images/tweet.png);
 }
 
 .markItUp .soundcloudbutton a {
-	background-image : url(images/soundcloud.png);
+	background-image : url(../assets/images/soundcloud.png);
 	margin-left: -3px;
 	margin-top: 3px;
 }
 
 .markItUp .instagrambutton a {
-	background-image : url(images/instagram.png);
+	background-image : url(../assets/images/instagram.png);
 }
 
 .markItUp .hrbutton a {
-	background-image : url(images/hr.png);
+	background-image : url(../assets/images/hr.png);
 }
 
 .markItUp .emoticonsbutton a {
-	background-image : url(images/emoticon.png);
+	background-image : url(../assets/images/emoticon.png);
 }
 
 .markItUp .clean a {
-	background-image : url(images/clean.png);
+	background-image : url(../assets/images/clean.png);
 }
 
 .markItUp .colors ul {
