Add missing icons editor #3639

--- a/src/components/com_kunena/template/crypsis/assets/less/editor.less
+++ b/src/components/com_kunena/template/crypsis/assets/less/editor.less
@@ -172,6 +172,10 @@ table.kpostbuttonset {
 	background-image : url(../assets/images/emoticon.png);
 }
 
+.markItUp .confidentialbutton a {
+	background-image : url(../assets/images/confidential.png);
+}
+
 .markItUp .clean a {
 	background-image : url(../assets/images/clean.png);
 }
