--- a/src/components/com_kunena/template/crypsisb3/assets/less/editor.less
+++ b/src/components/com_kunena/template/crypsisb3/assets/less/editor.less
@@ -176,6 +176,10 @@ table.kpostbuttonset {
 	background-image : url(../assets/images/clean.png);
 }
 
+.markItUp .confidentialbutton a {
+	background-image : url(../assets/images/confidential.png);
+}
+
 .markItUp .colors ul {
 	width   : auto;
 	padding : 1px;
