--- a/src/components/com_kunena/template/crypsis/assets/less/editor.less
+++ b/src/components/com_kunena/template/crypsis/assets/less/editor.less
@@ -434,3 +434,7 @@ li.markItUpButton ul {
 #iconset_inject .inline:hover {
 	cursor : pointer;
 }
+
+.kpoll-time-to-live-input {
+	margin-left: -30px !important;
+}
