--- a/src/components/com_kunena/template/crypsis/assets/less/general.less
+++ b/src/components/com_kunena/template/crypsis/assets/less/general.less
@@ -155,6 +155,16 @@ img {
 	border-radius : 4px;
 }
 
+.topic-starter-circle {
+	padding-top   : 24px !important;
+	margin-top    : -20px !important;
+}
+
+.topic-moderator-circle {
+	padding-top   : 24px !important;
+	margin-top    : -20px !important;
+}
+
 .topic-starter {
 	 background    : rgba(229, 229, 229, 0.4);
 	 display       : inline-block;
@@ -328,6 +338,11 @@ a:focus,
 
 .badger-info:after {
 	background : rgba(229, 229, 229, 0.4);
+}
+
+.badger-solved {
+	border: 1px solid #5cb85c;
+	background-color : honeydew;
 }
 
 legend {
@@ -720,10 +735,6 @@ select#postcatid {
 	font-size : 48px;
 }
 
-#ktopicsform [class*='span'] {
-	margin-left : 0 !important;
-}
-
 .ip {
 	margin : 0 0 10px;
 	width  : 150px;
@@ -938,7 +949,4 @@ div.krating > label:active {
 	position:relative;
 	top:2px;
 	left:2px;
-}
-.table td.span3, .table th.span3 {
-	width: 30%;
 }
