--- a/src/components/com_kunena/template/crypsis/assets/less/profile.less
+++ b/src/components/com_kunena/template/crypsis/assets/less/profile.less
@@ -15,6 +15,19 @@
 	margin-right: 3px;
 }
 
+.img-circle {
+	margin-top: 0.5em;
+	position: relative;
+
+	-webkit-border-radius: 50%;
+	-moz-border-radius: 50%;
+	border-radius: 50%;
+
+	-webkit-box-shadow: 0 0 0 3px #fff, 0 0 0 4px #ccc, 0 2px 5px 4px rgba(0,0,0,0.1);;
+	-moz-box-shadow: 0 0 0 3px #fff, 0 0 0 4px #ccc, 0 2px 5px 4px rgba(0,0,0,0.1);
+	box-shadow: 0 0 0 3px #fff, 0 0 0 4px #ccc, 0 2px 5px 4px rgba(0,0,0,0.1);
+}
+
 .kicon-profile-myspace {
 	background : url("images/social/myspace.png") 50% 50%;
 }
