--- a/src/components/com_kunena/template/crypsis/assets/css/jssocials-theme-classic.css
+++ b/src/components/com_kunena/template/crypsis/assets/css/jssocials-theme-classic.css
@@ -1,6 +1,6 @@
 .jssocials-share-twitter .jssocials-share-link {
   background: #00aced;
-  border: 1px solid #0099d3; }
+  border: 1px solid #0099d4; }
   .jssocials-share-twitter .jssocials-share-link:hover {
     background: #0087ba; }
 
@@ -33,6 +33,24 @@
   border: 1px solid #1c83f2; }
   .jssocials-share-email .jssocials-share-link:hover {
     background: #0e76e6; }
+
+.jssocials-share-whatsapp .jssocials-share-link {
+  background: #29a628;
+  border: 1px solid #249123; }
+  .jssocials-share-whatsapp .jssocials-share-link:hover {
+    background: #1f7d1e; }
+
+.jssocials-share-line .jssocials-share-link {
+  background: #25af00;
+  border: 1px solid #209600; }
+  .jssocials-share-line .jssocials-share-link:hover {
+    background: #1a7c00; }
+
+.jssocials-share-stumbleupon .jssocials-share-link {
+  background: #eb4823;
+  border: 1px solid #e03a14; }
+  .jssocials-share-stumbleupon .jssocials-share-link:hover {
+    background: #c93412; }
 
 .jssocials-share-link {
   padding: .5em .6em;
