--- a/src/components/com_kunena/template/crypsis/assets/less/general.less
+++ b/src/components/com_kunena/template/crypsis/assets/less/general.less
@@ -713,10 +713,6 @@ small.text-muted {
 	width : 190px;
 }
 
-#nav-menu a {
-	padding : 5px 10px 5px 15px;
-}
-
 #nav-menu img {
 	margin-left : -5px;
 }
@@ -949,4 +945,48 @@ div.krating > label:active {
 	position:relative;
 	top:2px;
 	left:2px;
+}
+
+.dropdown-toggle img.green {
+	margin-top: 0 !important;
+	-webkit-box-shadow: 0 0 0 2px green, 0 0 0 4px #ccc, 0 2px 5px 4px rgba(0, 0, 0, 0.1);
+	-moz-box-shadow: 0 0 0 2px green, 0 0 0 4px #ccc, 0 2px 5px 4px rgba(0, 0, 0, 0.1);
+	box-shadow: 0px 0px 0px 2px green, 0px 0px 0px 4px #ccc, 0px 2px 5px 4px rgba(0,0,0,0.1);
+}
+
+.dropdown-toggle img.yellow {
+	margin-top: 0 !important;
+	-webkit-box-shadow: 0 0 0 2px yellow, 0 0 0 4px #ccc, 0 2px 5px 4px rgba(0, 0, 0, 0.1);
+	-moz-box-shadow: 0 0 0 2px yellow, 0 0 0 4px #ccc, 0 2px 5px 4px rgba(0, 0, 0, 0.1);
+	box-shadow: 0px 0px 0px 2px yellow, 0px 0px 0px 4px #ccc, 0px 2px 5px 4px rgba(0,0,0,0.1);
+}
+
+.dropdown-toggle img.red {
+	margin-top: 0 !important;
+	-webkit-box-shadow: 0 0 0 2px red, 0 0 0 4px #ccc, 0 2px 5px 4px rgba(0, 0, 0, 0.1);
+	-moz-box-shadow: 0 0 0 2px red, 0 0 0 4px #ccc, 0 2px 5px 4px rgba(0, 0, 0, 0.1);
+	box-shadow: 0px 0px 0px 2px red, 0px 0px 0px 4px #ccc, 0px 2px 5px 4px rgba(0,0,0,0.1);
+}
+
+.dropdown-toggle img.grey {
+	margin-top: 0 !important;
+	-webkit-box-shadow: 0 0 0 2px grey, 0 0 0 4px #ccc, 0 2px 5px 4px rgba(0, 0, 0, 0.1);
+	-moz-box-shadow: 0 0 0 2px grey, 0 0 0 4px #ccc, 0 2px 5px 4px rgba(0, 0, 0, 0.1);
+	box-shadow: 0px 0px 0px 2px grey, 0px 0px 0px 4px #ccc, 0px 2px 5px 4px rgba(0,0,0,0.1);
+}
+
+.dropdown-toggle img.none {
+	margin-top: 0 !important;
+	box-shadow: 0 0 0 1px #d4d4d4, 0 0 0 0 #fff, 0 1px 1px rgba(0,0,0,0.1);
+}
+.rank-label-container {
+	margin-top: -19px;
+	/* z-index: 1000; */
+	text-align: center;
+}
+
+.label.label-default.rank-label {
+	background-color: rgb(81, 210, 183);
+	padding: 5px 10px 5px 10px;
+	border-radius: 27px;
 }
