--- a/src/administrator/components/com_kunena/media/css/layout.css
+++ b/src/administrator/components/com_kunena/media/css/layout.css
@@ -1,6 +1,6 @@
 /**
  * Kunena Component
- * @package Kunena.Administrator.Joomla30
+ * @package Kunena.Administrator
  *
  * @copyright (C) 2008 - 2016 Kunena Team. All rights reserved.
  * @license http://www.gnu.org/copyleft/gpl.html GNU/GPL
