--- a/src/components/com_kunena/template/crypsis/assets/less/general.less
+++ b/src/components/com_kunena/template/crypsis/assets/less/general.less
@@ -743,7 +743,12 @@ select#postcatid {
 }
 
 .intro {
-	margin : 0 0 10px 60px;
+	margin : 0 0 30px 60px;
+	padding-top: 7px;
+}
+
+#credits {
+	padding-bottom: 20px;
 }
 
 input[type=radio] + label {
