Crypsis : subject icon are too close from text of subject #3868

--- a/src/components/com_kunena/template/crypsis/assets/less/general.less
+++ b/src/components/com_kunena/template/crypsis/assets/less/general.less
@@ -882,6 +882,7 @@ form#postform div.control-group {
 .icon-topic {
 	font-size  : 24px;
 	margin-top : 10px;
+	margin-right: 10px;
 }
 
 #kmoderate-mode-selected,
