CrypsisB3: Update html + features

--- a/src/components/com_kunena/template/crypsis/assets/less/general.less
+++ b/src/components/com_kunena/template/crypsis/assets/less/general.less
@@ -985,3 +985,7 @@ div.krating > label:active {
 	margin-top: 0 !important;
 	box-shadow: 0 0 0 1px #d4d4d4, 0 0 0 0 #fff, 0 1px 1px rgba(0,0,0,0.1);
 }
+
+.thumbnail a {
+	text-decoration: none;
+}
