--- a/src/components/com_kunena/template/crypsisb3/assets/less/general.less
+++ b/src/components/com_kunena/template/crypsisb3/assets/less/general.less
@@ -1145,3 +1145,9 @@ div.moderators {
 #search select#mode {
 	margin-left: 0;
 }
+
+#ann-showdate select,
+#ann-publish select,
+#kuserform .form-inline input {
+	width: auto !important;
+}
