Crypsis: fix History and edit topic

--- a/src/components/com_kunena/template/crypsisb3/assets/less/general.less
+++ b/src/components/com_kunena/template/crypsisb3/assets/less/general.less
@@ -1151,3 +1151,8 @@ div.moderators {
 #kuserform .form-inline input {
 	width: auto !important;
 }
+
+#modified_reason {
+	margin-top: -60px;
+	padding-bottom: 50px;
+}
