Small html improvements

--- a/src/components/com_kunena/template/crypsis/assets/less/general.less
+++ b/src/components/com_kunena/template/crypsis/assets/less/general.less
@@ -990,3 +990,15 @@ div.krating > label:active {
 .thumbnail a {
 	text-decoration: none;
 }
+
+.span3 .img-circle {
+	width: 80%;
+}
+
+.span3 .img-polaroid {
+	width: 70%;
+}
+
+.profilebox.unstyled {
+	margin-left: 4px;
+}
