--- a/src/components/com_kunena/template/crypsisb3/assets/less/general.less
+++ b/src/components/com_kunena/template/crypsisb3/assets/less/general.less
@@ -714,6 +714,12 @@ select#postcatid {
 	width : 100%;
 	margin-left: -10px;
 }
+.fa-big,
+.icon-big {
+	font-size : 32px;
+	margin-top: 20px;
+	margin-left: 5px;
+}
 
 .glyphicon-big {
 	font-size : 32px;
