Crypsisb3: Fix navbar height (#3987)

--- a/src/components/com_kunena/template/crypsisb3/assets/less/general.less
+++ b/src/components/com_kunena/template/crypsisb3/assets/less/general.less
@@ -93,10 +93,6 @@ h2 {
 	padding : 0;
 }
 
-.navbar .nav > li > a {
-	padding : 11px 8px 11px;
-}
-
 #messages li {
 	float          : left;
 	margin-bottom  : 30px;
@@ -143,6 +139,7 @@ img {
 	max-width : 100%;
 	width     : auto \9;
 	height    : auto;
+	display: inline-block;
 }
 
 .table {
@@ -1111,10 +1108,6 @@ div.moderators {
 	display: inline-block;
 }
 
-.navbar .nav > li > a {
-	padding: 11px 8px 11px;
-}
-
 .dropdown-toggle img.green {
 	margin-top: 0 !important;
 	-webkit-box-shadow: 0 0 0 2px green, 0 0 0 4px #ccc, 0 2px 5px 4px rgba(0, 0, 0, 0.1);
@@ -1144,6 +1137,7 @@ div.moderators {
 }
 
 .dropdown-toggle img.none {
+	display: inline-block;
 	margin-top: 0 !important;
 	box-shadow: 0 0 0 1px #d4d4d4, 0 0 0 0 #fff, 0 1px 1px rgba(0,0,0,0.1);
 }
