Editor: Add wysibb editor (wysiwyg)

--- a/src/components/com_kunena/template/crypsisb3/assets/less/editor.less
+++ b/src/components/com_kunena/template/crypsisb3/assets/less/editor.less
@@ -431,8 +431,8 @@ li.markItUpButton ul {
 	margin-bottom: 35px;
 }
 
-#kshow_attach_form {
-	margin-top: -100px;
+.wysibb-text-editor {
+	min-height: 300px !important;
 }
 
 #iconset_inject .inline:hover {
