--- a/src/components/com_kunena/template/crypsis/assets/less/editor.less
+++ b/src/components/com_kunena/template/crypsis/assets/less/editor.less
@@ -435,3 +435,7 @@ li.markItUpButton ul {
 .kpoll-time-to-live-input {
 	margin-left: -30px !important;
 }
+
+.wysibb-text-editor {
+	min-height: 300px !important;
+}
