--- a/src/components/com_kunena/template/crypsis/assets/less/general.less
+++ b/src/components/com_kunena/template/crypsis/assets/less/general.less
@@ -1005,3 +1005,41 @@ div.krating > label:active {
 .profilebox.unstyled {
 	margin-left: 4px;
 }
+
+.btn-toolbar .btn.fa:before,
+#search .btn.fa:before {
+	content: "\f106";
+	font-size : 14px;
+}
+
+.btn-toolbar .btn.fa.collapsed:before,
+#search .btn.fa.collapsed:before {
+	content: "\f107";
+	font-size : 14px;
+}
+
+.btn-toolbar .btn.b3:before,
+#search .btn.b3:before {
+	content: "\e260";
+	font-size : 14px;
+	font-family: "Glyphicons Halflings";
+}
+
+.btn-toolbar .btn.b3.collapsed:before,
+#search .btn.b3.collapsed:before {
+	content: "\e259";
+	font-family: "Glyphicons Halflings";
+	font-size : 14px;
+}
+
+.btn-toolbar .btn.b2:before,
+#search .btn.b2:before {
+	background-position: -288px -120px;
+	font-size : 14px;
+}
+
+.btn-toolbar .btn.b2.collapsed:before,
+#search .btn.b2.collapsed:before {
+	background-position: -313px -119px;
+	font-size : 14px;
+}
