Fixes some issues
* padding deleted messages
* Backend - language strings
* Width emoticons
* Stats backend button style

--- a/src/components/com_kunena/template/crypsis/assets/less/general.less
+++ b/src/components/com_kunena/template/crypsis/assets/less/general.less
@@ -485,9 +485,9 @@ select#mode {
 
 .message-deleted {
 	background-color : rgba(0, 0, 0, 0.1);
-	padding          : 8px;
 	margin-bottom    : 15px;
 	border-radius    : 5px;
+	padding          : 19px 19px 8px 14px;
 }
 
 .input-append {
