--- a/src/components/com_kunena/template/crypsisb3/assets/less/general.less
+++ b/src/components/com_kunena/template/crypsisb3/assets/less/general.less
@@ -473,6 +473,7 @@ div.navbar > div > div.visible-sm.hidden-md > ul {
 	background-color : rgba(0, 0, 0, 0.1);
 	margin-bottom    : 15px;
 	border-radius    : 5px;
+	padding          : 19px 19px 8px 14px;
 }
 
 .input-group {
