--- a/src/components/com_kunena/template/crypsisb3/assets/css/rating.css
+++ b/src/components/com_kunena/template/crypsisb3/assets/css/rating.css
@@ -3,6 +3,17 @@
   COMPENENTS - RATING
 
 ----------------------------------------------------------------------------- */
+#krating {
+  display: inline-block;
+  left: 4px;
+  position: relative;
+  top: 4px;
+}
+
+#ktopicsform [class*='category'] #krating-top {
+  float: right;
+}
+
 #kunena .c-rating {
   display: -webkit-box;
   display: -webkit-flex;
