Small improvements by response forum (#4036)

--- a/src/components/com_kunena/template/crypsisb3/assets/less/general.less
+++ b/src/components/com_kunena/template/crypsisb3/assets/less/general.less
@@ -739,8 +739,7 @@ select#postcatid {
 }
 
 .ip {
-	margin : 0 0 10px;
-	width  : 150px;
+	padding-right: 10px;
 }
 
 .report {
@@ -754,7 +753,8 @@ select#postcatid {
 
 input[type=radio] + label {
 	display          : inline-block;
-	margin           : -2px;
+	border           : 1px solid rgba(0, 0, 0, 0);
+	margin           : -2px -3px;
 	padding          : 4px 12px;
 	background-color : transparent;
 }
