Crypsis: Add inline images

--- a/src/components/com_kunena/template/crypsis/assets/less/general.less
+++ b/src/components/com_kunena/template/crypsis/assets/less/general.less
@@ -1042,3 +1042,7 @@ div.krating > label:active {
 	background-position: -313px -119px;
 	font-size : 14px;
 }
+
+.kmsgimage {
+	display: inline-block;
+}
