--- a/src/components/com_kunena/template/crypsisb3/assets/less/general.less
+++ b/src/components/com_kunena/template/crypsisb3/assets/less/general.less
@@ -373,7 +373,7 @@ form {
 	height    : 100%;
 	margin    : 20px 0;
 	word-wrap : break-word;
-	font-family: "Apple Color Emoji", "Segoe UI", "Segoe UI Emoji", "Segoe UI Symbol";
+	font-family: "Segoe UI", "Segoe UI Emoji", "Segoe UI Symbol";
 }
 
 .input-xxlarge {
