--- a/src/components/com_kunena/template/crypsis/assets/less/general.less
+++ b/src/components/com_kunena/template/crypsis/assets/less/general.less
@@ -48,9 +48,23 @@ input[type='checkbox']:focus {
 	outline : 0 !important;
 }
 
+h1 {
+	font-size: 22px;
+	line-height: 24px;
+}
+
+h1 small {
+	font-size: 16.25px;
+}
+
 h2 {
-	padding-bottom : 2%;
-	margin-bottom  : 10px;
+	font-size: 20px;
+	padding-top: 0;
+	margin-top: 0;
+}
+
+h3 {
+	font-size: 18px;
 }
 
 .kgooglemap {
