--- a/src/components/com_kunena/template/crypsisb3/assets/less/general.less
+++ b/src/components/com_kunena/template/crypsisb3/assets/less/general.less
@@ -1202,3 +1202,20 @@ div.moderators {
 .kmsgimage img {
 	width: 100%;
 }
+
+.embed-container {
+	position: relative;
+	padding-bottom: 120%;
+	height: 0;
+	overflow: hidden;
+}
+
+.embed-container iframe,
+.embed-container object,
+.embed-container embed {
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+}
