Error in Duplicated Alias for Categories #3999

--- a/src/administrator/components/com_kunena/media/css/layout.css
+++ b/src/administrator/components/com_kunena/media/css/layout.css
@@ -224,3 +224,17 @@ dt {
 	border-bottom: 1px solid #eee;
 	padding-bottom: 15px;
 }
+
+.valid {
+	color: green;
+	width: 300px !important;
+}
+
+.invalid {
+	color: red;
+	width: 300px !important;
+}
+
+.invalid-border {
+	border-color: red !important;
+}
