--- a/src/components/com_kunena/template/crypsisb3/assets/less/general.less
+++ b/src/components/com_kunena/template/crypsisb3/assets/less/general.less
@@ -172,17 +172,20 @@ img {
 	border-radius : 4px;
 }
 
+.topic-starter-circle,
+.topic-moderator-circle {
+	padding-top   : 30px !important;
+	margin-top    : -20px !important;
+}
+
 .topic-starter {
-	background     : rgba(229, 229, 229, 0.4);
 	display        : inline-block;
-	height         : 15px;
+	height         : auto;
 	border-radius  : 0 0 4px 4px;
 	white-space    : nowrap;
-	padding-top    : 4px;
 	border         : 1px solid #ddd;
 	border-top     : 0 none;
-	padding-left   : 8px;
-	padding-right  : 8px;
+	padding        : 4px 8px 10px;
 	color          : #3a87ad;
 	line-height    : 1em;
 	font-size      : 10px;
@@ -191,16 +194,13 @@ img {
 }
 
 .topic-moderator {
-	background     : rgba(229, 229, 229, 0.4);
 	display        : inline-block;
-	height         : 15px;
+	height         : auto;
 	border-radius  : 0 0 4px 4px;
 	white-space    : nowrap;
-	padding-top    : 4px;
 	border         : 1px solid #ddd;
 	border-top     : 0 none;
-	padding-left   : 8px;
-	padding-right  : 8px;
+	padding        : 4px 8px 10px;
 	color          : red;
 	line-height    : 1em;
 	font-size      : 10px;
@@ -228,9 +228,15 @@ hr {
 
 .unstyled,
 .inline li,
-#kstats li,
+#kstats li {
+	list-style : none;
+}
+
 .profilebox li {
 	list-style : none;
+	padding: 0;
+	margin: 0;
+	line-height: 1.4em;
 }
 
 .viewsnum,
