Crypsis: Make the dropdown bigger

--- a/src/components/com_kunena/template/crypsisb3/assets/less/general.less
+++ b/src/components/com_kunena/template/crypsisb3/assets/less/general.less
@@ -954,6 +954,10 @@ div.pagination a.disabled:hover {
 	padding : 10px;
 }
 
+.dropdown-menu {
+	min-width : 220px;
+}
+
 #filter-time {
 	margin-top : 25px;
 }
