Crypsis: Fix floating attachments

--- a/src/components/com_kunena/template/crypsis/assets/less/general.less
+++ b/src/components/com_kunena/template/crypsis/assets/less/general.less
@@ -909,6 +909,15 @@ form#postform div.control-group {
 	list-style: none;
 }
 
+.thumbnails li {
+	margin: 0;
+	padding: 0;
+	width: 23%;
+	padding-right: 2%;
+	float: left;
+	display: inline-block;
+}
+
 .profile-expand ul {
 	padding: 0;
 }
