--- a/src/components/com_kunena/template/crypsisb3/assets/less/general.less
+++ b/src/components/com_kunena/template/crypsisb3/assets/less/general.less
@@ -172,6 +172,15 @@ img {
 	border-radius : 4px;
 }
 
+.thumbnails li {
+	margin: 0;
+	padding: 0;
+	width: 23%;
+	padding-right: 2%;
+	float: left;
+	display: inline-block;
+}
+
 .topic-starter-circle,
 .topic-moderator-circle {
 	padding-top   : 30px !important;
