Fix social icons

--- a/src/components/com_kunena/template/crypsis/assets/less/profile.less
+++ b/src/components/com_kunena/template/crypsis/assets/less/profile.less
@@ -29,11 +29,11 @@
 }
 
 .kicon-profile-myspace {
-	background : url("images/social/myspace.png") 50% 50%;
+	background : url("assets/images/social/myspace.png") 50% 50%;
 }
 
 .kicon-profile-digg {
-	background : url("images/social/digg.png") 50% 50%;
+	background : url("assets/images/social/digg.png") 50% 50%;
 }
 
 .kicon-profile-birthdate {
@@ -41,7 +41,7 @@
 }
 
 .kicon-profile-twitter {
-	background : url("images/social/twitter.png") 50% 50%;
+	background : url("assets/images/social/twitter.png") 50% 50%;
 }
 
 .kicon-profile-pm {
@@ -49,11 +49,11 @@
 }
 
 .kicon-profile-microsoft {
-	background : url("images/social/microsoft.png") 50% 50%;
+	background : url("assets/images/social/microsoft.png") 50% 50%;
 }
 
 .kicon-profile-friendfeed {
-	background : url("images/social/friendfeed.png") 50% 50%;
+	background : url("assets/images/social/friendfeed.png") 50% 50%;
 }
 
 .kicon-profile-website {
@@ -65,7 +65,7 @@
 }
 
 .kicon-profile-google {
-	background : url("images/social/google.png") 50% 50%;
+	background : url("assets/images/social/google.png") 50% 50%;
 }
 
 .kicon-profile-gender-unknown {
@@ -73,7 +73,7 @@
 }
 
 .kicon-profile-facebook {
-	background : url("images/social/facebook.png") 50% 50%;
+	background : url("assets/images/social/facebook.png") 50% 50%;
 }
 
 .kicon-profile-email {
@@ -81,19 +81,19 @@
 }
 
 .kicon-profile-delicious {
-	background : url("images/social/delicious.png") 50% 50%;
+	background : url("assets/images/social/delicious.png") 50% 50%;
 }
 
 .kicon-profile-icq {
-	background : url("images/social/icq.png") 50% 50%;
+	background : url("assets/images/social/icq.png") 50% 50%;
 }
 
 .kicon-profile-flickr {
-	background : url("images/social/flickr.png") 50% 50%;
+	background : url("assets/images/social/flickr.png") 50% 50%;
 }
 
 .kicon-profile-skype {
-	background : url("images/social/skype.png") 50% 50%;
+	background : url("assets/images/social/skype.png") 50% 50%;
 }
 
 .kicon-profile-location {
@@ -105,7 +105,7 @@
 }
 
 .kicon-profile-linkedin {
-	background : url("images/social/linkedin.png") 50% 50%;
+	background : url("assets/images/social/linkedin.png") 50% 50%;
 }
 
 .kicon-profile-gender-female {
@@ -113,43 +113,43 @@
 }
 
 .kicon-profile-blogspot {
-	background : url("images/social/blogger.png") 50% 50%;
+	background : url("assets/images/social/blogger.png") 50% 50%;
 }
 
 .kicon-profile-aim {
-	background : url("images/social/aim.png") 50% 50%;
+	background : url("assets/images/social/aim.png") 50% 50%;
 }
 
 .kicon-profile-apple {
-	background : url("images/social/apple.png") 50% 50%;
+	background : url("assets/images/social/apple.png") 50% 50%;
 }
 
 .kicon-profile-qq {
-	background : url("images/social/qq.png") 50% 50%;
+	background : url("assets/images/social/qq.png") 50% 50%;
 }
 
 .kicon-profile-qzone {
-	background : url("images/social/qzone.png") 50% 50%;
+	background : url("assets/images/social/qzone.png") 50% 50%;
 }
 
 .kicon-profile-instagram {
-	background : url("images/social/instagram.png") 50% 50%;
+	background : url("assets/images/social/instagram.png") 50% 50%;
 }
 
 .kicon-profile-weibo {
-	background : url("images/social/weibo.png") 50% 50%;
+	background : url("assets/images/social/weibo.png") 50% 50%;
 }
 
 .kicon-profile-wechat {
-	background : url("images/social/wechat.png") 50% 50%;
+	background : url("assets/images/social/wechat.png") 50% 50%;
 }
 
 .kicon-profile-vk {
-	background : url("images/social/vk.png") 50% 50%;
+	background : url("assets/images/social/vk.png") 50% 50%;
 }
 
 .kicon-profile-telegram {
-	background : url("images/social/telegram.png") 50% 50%;
+	background : url("assets/images/social/telegram.png") 50% 50%;
 }
 
 span.kicon-profile-website,
