Fix input announcement date

--- a/src/components/com_kunena/template/crypsis/assets/less/general.less
+++ b/src/components/com_kunena/template/crypsis/assets/less/general.less
@@ -1094,3 +1094,9 @@ div.krating > label:active {
 #poll-results {
 	padding-bottom: 40px;
 }
+
+#ann-date .date,
+#ann-date2 .date,
+#ann-date3 .date {
+	display: inline-block !important;
+}
