--- a/src/components/com_kunena/template/crypsisb3/assets/less/general.less
+++ b/src/components/com_kunena/template/crypsisb3/assets/less/general.less
@@ -1246,3 +1246,9 @@ div.moderators {
 #poll-results {
 	padding-bottom: 40px;
 }
+
+#ann-date .date,
+#ann-date2 .date,
+#ann-date3 .date {
+	display: inline-block !important;
+}
