--- a/src/components/com_kunena/template/crypsisb3/assets/less/general.less
+++ b/src/components/com_kunena/template/crypsisb3/assets/less/general.less
@@ -1169,28 +1169,28 @@ div.moderators {
 	margin-top: 0 !important;
 	-webkit-box-shadow: 0 0 0 2px green, 0 0 0 4px #ccc, 0 2px 5px 4px rgba(0, 0, 0, 0.1);
 	-moz-box-shadow: 0 0 0 2px green, 0 0 0 4px #ccc, 0 2px 5px 4px rgba(0, 0, 0, 0.1);
-	box-shadow: 0px 0px 0px 2px green, 0px 0px 0px 4px #ccc, 0px 2px 5px 4px rgba(0,0,0,0.1);
+	box-shadow: 0 0 0 2px green, 0 0 0 4px #ccc, 0 2px 5px 4px rgba(0,0,0,0.1);
 }
 
 .dropdown-toggle img.yellow {
 	margin-top: 0 !important;
 	-webkit-box-shadow: 0 0 0 2px yellow, 0 0 0 4px #ccc, 0 2px 5px 4px rgba(0, 0, 0, 0.1);
 	-moz-box-shadow: 0 0 0 2px yellow, 0 0 0 4px #ccc, 0 2px 5px 4px rgba(0, 0, 0, 0.1);
-	box-shadow: 0px 0px 0px 2px yellow, 0px 0px 0px 4px #ccc, 0px 2px 5px 4px rgba(0,0,0,0.1);
+	box-shadow: 0 0 0 2px yellow, 0 0 0 4px #ccc, 0 2px 5px 4px rgba(0,0,0,0.1);
 }
 
 .dropdown-toggle img.red {
 	margin-top: 0 !important;
 	-webkit-box-shadow: 0 0 0 2px red, 0 0 0 4px #ccc, 0 2px 5px 4px rgba(0, 0, 0, 0.1);
 	-moz-box-shadow: 0 0 0 2px red, 0 0 0 4px #ccc, 0 2px 5px 4px rgba(0, 0, 0, 0.1);
-	box-shadow: 0px 0px 0px 2px red, 0px 0px 0px 4px #ccc, 0px 2px 5px 4px rgba(0,0,0,0.1);
+	box-shadow: 0 0 0 2px red, 0 0 0 4px #ccc, 0 2px 5px 4px rgba(0,0,0,0.1);
 }
 
 .dropdown-toggle img.grey {
 	margin-top: 0 !important;
 	-webkit-box-shadow: 0 0 0 2px grey, 0 0 0 4px #ccc, 0 2px 5px 4px rgba(0, 0, 0, 0.1);
 	-moz-box-shadow: 0 0 0 2px grey, 0 0 0 4px #ccc, 0 2px 5px 4px rgba(0, 0, 0, 0.1);
-	box-shadow: 0px 0px 0px 2px grey, 0px 0px 0px 4px #ccc, 0px 2px 5px 4px rgba(0,0,0,0.1);
+	box-shadow: 0 0 0 2px grey, 0 0 0 4px #ccc, 0 2px 5px 4px rgba(0,0,0,0.1);
 }
 
 .dropdown-toggle img.none {
