Objects not aligned when minimized browser window #4265

--- a/src/components/com_kunena/template/crypsis/assets/less/mediaqueries.less
+++ b/src/components/com_kunena/template/crypsis/assets/less/mediaqueries.less
@@ -218,7 +218,9 @@
 
 /* Tablets */
 @media (min-width: 768px) and (max-width: 959px) {
-
+	#kbbcode-preview {
+		margin-top: 63px;
+	}
 }
 
 /* Desktop */
@@ -238,6 +240,10 @@
 
 	#recent-list {
 		width: 53%;
+	}
+
+	#kbbcode-preview {
+		margin-top: 35px;
 	}
 }
 
