Can't search by specific date #4465

--- a/src/components/com_kunena/template/crypsis/assets/less/general.less
+++ b/src/components/com_kunena/template/crypsis/assets/less/general.less
@@ -1095,3 +1095,7 @@ div.krating > label:active {
 #ann-date3 .date {
 	display: inline-block !important;
 }
+
+#searchatdate .date {
+	display: inline-block !important;
+}
