--- a/src/components/com_kunena/template/crypsis/assets/less/general.less
+++ b/src/components/com_kunena/template/crypsis/assets/less/general.less
@@ -1095,3 +1095,9 @@ div.krating > label:active {
 #ann-date3 .date {
 	display: inline-block !important;
 }
+
+.dropdown-toggle .img-polaroid {
+	padding: 0;
+	margin: 0;
+	border: 0;
+}
