--- a/src/components/com_kunena/template/crypsisb3/assets/less/mediaqueries.less
+++ b/src/components/com_kunena/template/crypsisb3/assets/less/mediaqueries.less
@@ -21,8 +21,8 @@
     -webkit-transform: translate3d(0, 0, 0);
   }
 
-  [class*="badger"] {
-    padding: 30% 19px 14px;
+  .visible-xs .text-muted {
+    margin-top: -30px;
   }
 
   .form-search {
