Fix merge conflict

--- a/src/components/com_kunena/template/crypsis/assets/less/general.less
+++ b/src/components/com_kunena/template/crypsis/assets/less/general.less
@@ -1098,10 +1098,10 @@ div.krating > label:active {
 
 #searchatdate .date {
 	display: inline-block !important;
+}
 
 .dropdown-toggle .img-polaroid {
 	padding: 0;
 	margin: 0;
 	border: 0;
->>>>>>> upstream/K5.0
 }
