Blank space in menu when Avatar Type=Thumbnail #4478 #4485  port K50

--- a/src/components/com_kunena/template/crypsis/assets/less/general.less
+++ b/src/components/com_kunena/template/crypsis/assets/less/general.less
@@ -1096,3 +1096,9 @@ div.krating > label:active {
 #ann-date3 .date {
   display: inline-block !important;
 }
+
+.dropdown-toggle .img-polaroid {
+	padding: 0;
+    margin: 0;
+    border: 0;
+}
