Can't search by specific date #4465 #4482  port K50

--- a/src/components/com_kunena/template/crypsisb3/assets/less/general.less
+++ b/src/components/com_kunena/template/crypsisb3/assets/less/general.less
@@ -1245,6 +1245,7 @@ div.moderators {
 
 #ann-date .date,
 #ann-date2 .date,
-#ann-date3 .date {
+#ann-date3 .date,
+#searchatdate .date {
   display: inline-block !important;
 }
