--- a/src/components/com_kunena/template/crypsis/assets/less/general.less
+++ b/src/components/com_kunena/template/crypsis/assets/less/general.less
@@ -1093,6 +1093,7 @@ div.krating > label:active {
 
 #ann-date .date,
 #ann-date2 .date,
-#ann-date3 .date {
+#ann-date3 .date,
+#searchatdate .date {
   display: inline-block !important;
 }
