Can't search by specific date #4465 #4482  port K50 (#4519)

--- a/src/components/com_kunena/template/crypsis/assets/less/general.less
+++ b/src/components/com_kunena/template/crypsis/assets/less/general.less
@@ -1093,7 +1093,8 @@ div.krating > label:active {
 
 #ann-date .date,
 #ann-date2 .date,
-#ann-date3 .date {
+#ann-date3 .date,
+#searchatdate .date {
   display: inline-block !important;
 }
 
