Add support deeper menu item

--- a/src/components/com_kunena/template/crypsis/assets/less/general.less
+++ b/src/components/com_kunena/template/crypsis/assets/less/general.less
@@ -523,7 +523,6 @@ table .well {
 }
 
 .nav .dropdown-menu a {
-  display: inline-block;
   text-decoration: none;
   .btn-link {
     margin-left: -120px;
@@ -1102,4 +1101,8 @@ div.krating > label:active {
 	padding: 0;
     margin: 0;
     border: 0;
+}
+
+.dropdown-submenu > a::after {
+  display: none !important;
 }
