--- a/src/components/com_kunena/template/crypsisb3/assets/less/general.less
+++ b/src/components/com_kunena/template/crypsisb3/assets/less/general.less
@@ -526,7 +526,6 @@ table .well {
 }
 
 .nav .dropdown-menu a {
-  display: inline-block;
   text-decoration: none;
   .btn-link {
     margin-left: -120px;
@@ -1248,4 +1247,8 @@ div.moderators {
 #ann-date3 .date,
 #searchatdate .date {
   display: inline-block !important;
+}
+
+.dropdown-submenu > a::after {
+  display: none !important;
 }
