Codestyle: improve code

--- a/src/components/com_kunena/template/crypsisb3/assets/less/general.less
+++ b/src/components/com_kunena/template/crypsisb3/assets/less/general.less
@@ -395,7 +395,7 @@ form {
   height: 100%;
   margin: 20px 0;
   word-wrap: break-word;
-  font-family: "Segoe UI", "Segoe UI Emoji", "Segoe UI Symbol";
+  font-family: "Segoe UI", "Segoe UI Emoji", "Segoe UI Symbol", serif;
 }
 
 .input-xxlarge {
@@ -870,13 +870,13 @@ div.pagination a.disabled:hover {
 #search .btn.b3:before {
   content: "\e260";
   font-size: 14px;
-  font-family: "Glyphicons Halflings";
+  font-family: "Glyphicons Halflings", serif;
 }
 
 .btn-toolbar .btn.b3.collapsed:before,
 #search .btn.b3.collapsed:before {
   content: "\e259";
-  font-family: "Glyphicons Halflings";
+  font-family: "Glyphicons Halflings", serif;
   font-size: 14px;
 }
 
