--- a/src/components/com_kunena/template/crypsis/assets/less/general.less
+++ b/src/components/com_kunena/template/crypsis/assets/less/general.less
@@ -388,7 +388,7 @@ form {
   height: 100%;
   margin: 20px 0;
   word-wrap: break-word;
-  font-family: "Segoe UI", "Segoe UI Emoji", "Segoe UI Symbol";
+  font-family: "Segoe UI", "Segoe UI Emoji", "Segoe UI Symbol", Arial, Helvetica, Sans Serif, serif;
 }
 
 .input-xxlarge {
@@ -851,7 +851,7 @@ div.pagination a.disabled:hover {
 .btn-toolbar .btn.btn-small.collapsed:before,
 #search .btn.btn-small.collapsed:before {
   content: "";
-  font-family: "icomoon";
+  font-family: "icomoon", serif;
   font-size: 8px;
 }
 
@@ -1035,13 +1035,13 @@ div.krating > label:active {
 #search .btn.b3:before {
   content: "\e260";
   font-size: 14px;
-  font-family: "Glyphicons Halflings";
+  font-family: "Glyphicons Halflings", serif;
 }
 
 .btn-toolbar .btn.b3.collapsed:before,
 #search .btn.b3.collapsed:before {
   content: "\e259";
-  font-family: "Glyphicons Halflings";
+  font-family: "Glyphicons Halflings", serif;
   font-size: 14px;
 }
 
